--- a/arch/arm64/configs/belabox_defconfig
+++ b/arch/arm64/configs/belabox_defconfig
@@ -470,6 +470,7 @@ CONFIG_USB_ALI_M5632=y
 CONFIG_USB_AN2720=y
 CONFIG_USB_KC2190=y
 CONFIG_USB_NET_CX82310_ETH=m
+CONFIG_USB_IPHETH=m
 CONFIG_ATH9K=m
 CONFIG_ATH9K_DEBUGFS=y
 CONFIG_ATH9K_STATION_STATISTICS=y
