--- a/arch/arm64/configs/belabox_defconfig
+++ b/arch/arm64/configs/belabox_defconfig
@@ -218,6 +218,7 @@ CONFIG_VLAN_8021Q_GVRP=y
 CONFIG_VLAN_8021Q_MVRP=y
 CONFIG_NET_SCHED=y
 CONFIG_NET_SCH_HTB=y
+CONFIG_NET_SCH_NETEM=m
 CONFIG_NET_CLS_U32=y
 CONFIG_NET_CLS_CGROUP=y
 CONFIG_NET_EMATCH=y
